test/bad/generics/def04.px

func f<N>(N x) def
    y = N

f(4)
